# psychosvaha_with_frontend

./: .gitignore  package-lock.json  package.json
backend/: .env_example  Makefile  config.py  constants.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 30bf3e52d2d6_.py  4d1b05920ca0_.py  5ad85f4096ba_.py  75fbc373e8b3_.py  88d81acdf433_.py  a69a6c3ec9fe_.py  b57c1cd44ca3_.py  c1d3f3075fd3_.py  c780ca6b0a57_.py  c8dbf9957887_.py  e1d451f78343_.py  fb477d919cb0_.py
backend/cron/queue/: consumer.py  errors.py  main.py
backend/cron/queue/tasks/: base_processor.py  base_task.py
backend/database/: engine.py
backend/database/models/: __init__.py  client_requests.py  client_requests_tags.py  client_requests_therapists.py  queue.py  tags.py  therapists.py  therapists_tags.py
backend/domain/: client_therapist.py  errors.py  request_tags.py  request_therapists.py
backend/domain/enums/: tags.py
backend/dto/: client_request.py  enums.py  therapist.py  therapist_request.py
backend/enums/: tags.py
backend/modules/di/: container.py
backend/repo/: client_requests.py  client_requests_tags.py  client_requests_therapists.py  queue.py  tags.py  therapist_tags.py  therapists.py
backend/repo/enums/: tags.py
backend/server/: dependencies.py  di.py  main.py
backend/server/handlers/client_requests/: controller.py
backend/service/: client_request.py  date_time.py  therapist.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/cron/: conftest.py
(+43 files in other folders)
