[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "anyio==4.12.0",
]
